@@ -781,6 +781,9 @@
                             --add-opens java.base/sun.nio.ch=ALL-UNNAMED
                             --add-opens java.base/sun.security.util=ALL-UNNAMED
                             --add-opens java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED
+                            --add-exports=jdk.xml.dom/org.w3c.dom.html=ALL-UNNAMED
+                            --add-exports=java.xml/com.sun.org.apache.xerces.internal.impl.xs=ALL-UNNAMED
+                            --add-opens java.base/java.util.concurrent=ALL-UNNAMED
                         </argLine>
                         <systemPropertyVariables>
                             <powermock.classloading>javagent</powermock.classloading>
